test/fixtures/errors/jade/valid.jade
h2 This is a valid template